triton-vm/trybuild/profiler_macro_is_private.stderr
error[E0603]: macro `profiler` is private
 --> trybuild/profiler_macro_is_private.rs:1:26
  |
1 | use triton_vm::profiler::profiler;
  |                          ^^^^^^^^ private macro
  |
note: the macro `profiler` is defined here
 --> src/profiler.rs
  |
  | pub(crate) use profiler;
  |                ^^^^^^^^
